# geradordocs

./: .sample.env  README.md  app.ipynb  desenvolvimento-de-uma-plataforma-de-ia-para-marketing-e-vendas.docx  pyproject.toml
projai/: agents.py  apps.py  article.py  builders.py  prompts.py  pyvenv.cfg
